--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -111,7 +111,7 @@
                     <!-- <img th:if="${oferta.imagenBanner != null}" th:src="@{${oferta.imagenBanner}}" alt="Banner Oferta"
                         class="banner-img" /> -->
                     <div class="banner">
-                        <img th:src="${oferta.imagenBanner != null ? oferta.imagenBanner : '/img/oferta.png'}"
+                        <img th:src="${oferta.imagenBanner != null ? oferta.imagenBanner : '/img/oferta.webp'}"
                             alt="Banner Oferta" class="banner-img" />
                     </div>
 
