--- a/src/main/resources/templates/ofertas/ofertas-form.html
+++ b/src/main/resources/templates/ofertas/ofertas-form.html
@@ -82,7 +82,7 @@
                     <!-- Imagen Banner -->
                     <div class="mb-3">
                         <label for="imagenBanner" class="form-label">Imagen del Banner</label>
-                        <input type="file" id="imagenBanner" name="imagenBannerFile" class="form-control" />
+                        <input type="file" id="file" name="file" class="form-control" />
                     </div>
 
                     <!-- Condiciones -->
