--- a/src/main/resources/templates/productos/productos-list-admin.html
+++ b/src/main/resources/templates/productos/productos-list-admin.html
@@ -10,6 +10,11 @@
         .container {
             margin-left: 20px;
         }
+
+        /* .main-content {
+            min-height: 100vh;
+            /* ocupa como mínimo toda la pantalla */
+        /* pero se expande si el contenido es más grande */
     </style>
 
 </head>
@@ -22,7 +27,8 @@
         <div class="container mt-4">
             <div class="card p-2">
 
-                <table id="tabla-productos" class="table table-striped table-bordered" style="width:100%">
+                <table id="tabla-productos" class="table table-striped table-bordered table-responsive"
+                    style="width:100%">
                     <thead>
                         <tr>
                             <th>#</th>
