Se agregó el proceso de Compra

--- a/src/main/resources/templates/layout-dashboard.html
+++ b/src/main/resources/templates/layout-dashboard.html
@@ -55,6 +55,7 @@
                 </li>
                 <li class="nav-item"><a th:href="@{/proveedores/listar}" class="nav-link text-white">Proveedores</a>
                 </li>
+                <li class="nav-item"><a th:href="@{/compras/nuevo}" class="nav-link text-white">Compras</a></li>
                 <li class="nav-item"><a th:href="@{/ventas/nuevo}" class="nav-link text-white">Ventas</a></li>
                 <li class="nav-item"><a th:href="@{/ventas/listadoAdmin}" class="nav-link text-white">Listado de
                         Ventas</a></li>
